Fix search/logo styling and change some facet logic - remove all search related css from map and dashboard - add needed css in search and position it absolut again so it looks the same on both pages - results are now scrollable if they exceed 95vh - nivio in navigation is again in our font color - facets will now disappear if you search by hand or if you clicked on a facet - the search button will now also close facets in addition to clear the search, to remove the second button because overlapping the facets with search results was really ugly

--- a/src/main/app/src/Components/LandscapeComponent/LandscapeDashboard/LandscapeDashboard.scss
+++ b/src/main/app/src/Components/LandscapeComponent/LandscapeDashboard/LandscapeDashboard.scss
@@ -12,9 +12,6 @@ $dotSize: 200px;
       text-align: center;
       font-size: $header-font-size;
     }
-    .search {
-      text-align: center;
-    }
   }
 
   .groupContainer {
